--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://A13SS.github.io/PortfolioPersonalProyecto",
+  "homepage": "https://a13ss.github.io/PortfolioPersonalProyecto",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
