--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://a13ss.github.io/PortfolioPersonalProyecto",
+  "homepage": "https://A13SS.github.io/PortfolioPersonalProyecto",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +12,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+  "base": "/PortfolioPersonalProyecto/",
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
